--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,13 @@ SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (PostgreSQL for production)
-DB_ENGINE=django.db.backends.postgresql
+# Database (PostgreSQL)
+# Run ./setup_database_macos.sh (macOS) or ./setup_database.sh (Linux) to create the database
 DB_NAME=doctype_db
-DB_USER=postgres
-DB_PASSWORD=your-db-password
+DB_USER=doctype_user
+DB_PASSWORD=doctype_password
 DB_HOST=localhost
 DB_PORT=5432
-
-# For development, use SQLite
-# DB_ENGINE=django.db.backends.sqlite3
-# DB_NAME=db.sqlite3
 
 # CORS
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
