--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,15 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = doctype.settings
-python_files = tests.py test_*.py *_tests.py
+python_files = test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
 addopts =
     --verbose
-    --cov=.
-    --cov-report=html
-    --cov-report=term-missing
-    --cov-exclude=*/migrations/*
-    --cov-exclude=*/tests/*
-    --cov-exclude=*/venv/*
-    --cov-exclude=*/.venv/*
+    --strict-markers
+    --tb=short
+    --reuse-db
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+testpaths = .
